--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "homepage": "https://github.com/geoFluxus/geofluxus-map#readme",
   "dependencies": {
-    "ol": "^6.5.0"
+    "ol": "^6.5.0",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "react": "17.0.2"
   }
 }
