--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   "homepage": "https://github.com/geoFluxus/geofluxus-map#readme",
   "dependencies": {
     "d3": "^6.6.2",
-    "ol": "^6.5.0",
-    "react-dom": "^17.0.2"
+    "ol": "^6.5.0"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
-    "react": "17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
