--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/geoFluxus/geofluxus-map#readme",
   "dependencies": {
     "d3": "^6.6.2",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.0.0-rc.7",
     "ol": "^6.5.0"
   },
   "devDependencies": {
