--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geofluxus-map",
-  "version": "1.3.2",
+  "version": "1.3.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,9 @@
   "homepage": "https://github.com/geoFluxus/geofluxus-map#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@turf/center": "^6.5.0",
+    "@turf/center-of-mass": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
     "d3": "^6.6.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.0.0-rc.7",
