--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geofluxus-map",
-  "version": "1.5.3",
+  "version": "1.5.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -26,10 +26,10 @@
     "d3": "^6.6.2",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.0.0-rc.7",
-    "ol": "^6.5.0",
-    "parcel-bundler": "^1.12.5"
+    "ol": "^6.5.0"
   },
   "devDependencies": {
+    "parcel-bundler": "^1.12.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
