--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geofluxus-map",
-  "version": "1.6.7",
+  "version": "1.6.8",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,12 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "staticFiles": {
+    "staticPath": "public",
+    "watcherGlob": "**"
   }
 }
