--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "geofluxus-map",
-  "version": "1.8.1",
+  "version": "1.8.2",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
